--- a/app/src/main/res/layout/activity_class_time__admin.xml
+++ b/app/src/main/res/layout/activity_class_time__admin.xml
@@ -7,6 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".Teachers_detailes_Admin">
 
+    <EditText
+        android:id="@+id/productname2"
+        android:layout_width="248dp"
+        android:layout_height="42dp"
+        android:background="@drawable/bt"
+        android:drawableStart="@drawable/enter"
+        android:drawableLeft="@drawable/enter"
+        android:ems="10"
+        android:hint="Product ID"
+        android:inputType="textPersonName"
+        android:padding="10dp"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
+
     <ImageView
         android:id="@+id/imgview"
         android:layout_width="249dp"
@@ -109,5 +128,5 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.845" />
+        app:layout_constraintVertical_bias="0.929" />
 </android.support.constraint.ConstraintLayout>
