--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -9,10 +9,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="428dp"
+        android:layout_width="413dp"
 
 
-        android:layout_height="406dp"
+        android:layout_height="854dp"
         android:layout_marginStart="2dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,22 +22,48 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/tid3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Transaction ID:"
+
+            android:textColorHint="@color/black"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/tid"
-            android:layout_width="139dp"
-            android:layout_height="37dp"
+            android:layout_width="367dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/btnn"
             android:padding="10dp"
+            android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Name:"
 
             android:textColorHint="@color/black"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/pph3"
-            android:layout_width="143dp"
-            android:layout_height="36dp"
+            android:layout_width="375dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="4dp"
             android:layout_marginRight="20dp"
@@ -45,6 +71,19 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:padding="10dp"
+            android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Phone Number:"
             android:textColorHint="@color/black"
             android:textStyle="bold" />
 
@@ -59,6 +98,19 @@
             android:ems="10"
             android:padding="10dp"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Email ID:"
+            android:textColorHint="@color/black"
             android:textStyle="bold" />
 
         <TextView
@@ -70,6 +122,19 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/btnn"
             android:padding="10dp"
+            android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Address:"
             android:textColorHint="@color/black"
             android:textStyle="bold" />
 
@@ -85,6 +150,19 @@
             android:inputType="textPersonName"
             android:padding="10dp"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Nos:"
+            android:textColorHint="@color/black"
             android:textStyle="bold" />
 
         <TextView
@@ -96,6 +174,19 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/btnn"
             android:padding="10dp"
+            android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Price:"
             android:textColorHint="@color/black"
             android:textStyle="bold" />
 
@@ -109,6 +200,19 @@
             android:background="@drawable/btnn"
             android:padding="10dp"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Product Name:"
+            android:textColorHint="@color/black"
             android:textStyle="bold" />
 
         <TextView
@@ -121,18 +225,32 @@
             android:background="@drawable/btnn"
             android:padding="10dp"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tid11"
+            android:layout_width="368dp"
+            android:layout_height="37dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:text="Product Details:"
+            android:textColorHint="@color/black"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/prdt"
-            android:layout_width="155dp"
-            android:layout_height="38dp"
+            android:layout_width="382dp"
+            android:layout_height="54dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/btnn"
             android:padding="10dp"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
             android:textStyle="bold" />
 
         <TextView
