--- a/app/src/main/res/layout/activity_mainhome.xml
+++ b/app/src/main/res/layout/activity_mainhome.xml
@@ -38,14 +38,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="STATUS" />
+        android:text="TRACK ORDER" />
 
 
-    <android.support.design.widget.TabItem
-        android:id="@+id/tabSta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="USER PROFILE" />
+<!--    <android.support.design.widget.TabItem-->
+<!--        android:id="@+id/tabSta"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="USER PROFILE" />-->
 
 
   </android.support.design.widget.TabLayout>
