--- a/app/src/main/res/layout/recycler_c.xml
+++ b/app/src/main/res/layout/recycler_c.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+
     >
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="431dp"
+        android:layout_width="433dp"
 
 
-        android:layout_height="453dp"
+        android:layout_height="720dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="86dp"
         android:orientation="vertical"
@@ -45,7 +46,10 @@
             android:background="@drawable/btnn"
             android:ems="10"
             android:inputType="textPersonName"
+            android:padding="12dp"
+            android:textColor="@color/black"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
             android:textStyle="bold" />
 
         <TextView
@@ -69,7 +73,10 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/btnn"
             android:ems="10"
+            android:padding="12dp"
+            android:textColor="@color/black"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
             android:textStyle="bold" />
 
         <ImageView
@@ -99,29 +106,66 @@
         <TextView
             android:id="@+id/pph1"
             android:layout_width="397dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/btnn"
             android:ems="10"
             android:inputType="textPersonName"
+            android:padding="12dp"
+            android:textColor="@color/black"
             android:textColorHint="@color/black"
+            android:textSize="17dp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textVie7"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#7A7988" />
 
         <Button
             android:id="@+id/purchase"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#042175"
-            android:text="BYE"
+            android:background="#DF0080"
+            android:text="Buy"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#7A7988" />
+
+        <Button
+            android:id="@+id/re"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#F70270"
+            android:text="review"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#7A7988" />
+
+        <Button
+            android:id="@+id/ve"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#DD0D64"
+            android:text="VIEW REVIEW"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="518dp"
-            android:layout_height="4dp"
-            android:background="#FF0066" />
+            android:layout_height="2dp"
+            android:background="#7A7988" />
 
 
     </LinearLayout>
